--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
     },
     "dependencies": {
         "@prisma/client": "^5.8.1",
+        "axios": "^1.13.5",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "google-auth-library": "^10.5.0",
         "jsonwebtoken": "^9.0.2",
         "socket.io": "^4.8.3",
+        "stripe": "^20.3.0",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
