--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,20 +14,22 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
-    "socket.io-client": "^4.8.3"
+    "socket.io-client": "^4.8.3",
+    "react-google-recaptcha": "^3.1.0"
   },
   "overrides": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.13.2",
     "babel-plugin-react-compiler": "1.0.0",
     "clsx": "^2.1.1",
